Bug 1490952 - Align <tabs> default and override styles on Mac. r=mikedeboer
UltraBlame original commit: 454f0d7c80a1a7214687ab669b69b719f15197ab

--- a/toolkit/themes/osx/global/tabbox.css
+++ b/toolkit/themes/osx/global/tabbox.css
@@ -162,11 +162,6 @@ font
 :
 menu
 ;
-}
-tabbox
->
-tabs
-{
 padding
 :
 0
